@@ -3636,3 +3636,279 @@ _pdbx_chem_comp_audit.processing_site
 8JU "Create component" 2017-07-20 RCSB 
 8JU "Initial release"  2018-06-27 RCSB 
 # 
+data_4YS
+# 
+_chem_comp.id                                    4YS 
+_chem_comp.name                                  "isoquinolin-1(2H)-one" 
+_chem_comp.type                                  NON-POLYMER 
+_chem_comp.pdbx_type                             HETAIN 
+_chem_comp.formula                               "C9 H7 N O" 
+_chem_comp.mon_nstd_parent_comp_id               ? 
+_chem_comp.pdbx_synonyms                         ? 
+_chem_comp.pdbx_formal_charge                    0 
+_chem_comp.pdbx_initial_date                     2015-06-26 
+_chem_comp.pdbx_modified_date                    2016-05-20 
+_chem_comp.pdbx_ambiguous_flag                   N 
+_chem_comp.pdbx_release_status                   REL 
+_chem_comp.pdbx_replaced_by                      ? 
+_chem_comp.pdbx_replaces                         ? 
+_chem_comp.formula_weight                        145.158 
+_chem_comp.one_letter_code                       ? 
+_chem_comp.three_letter_code                     4YS 
+_chem_comp.pdbx_model_coordinates_details        ? 
+_chem_comp.pdbx_model_coordinates_missing_flag   N 
+_chem_comp.pdbx_ideal_coordinates_details        Corina 
+_chem_comp.pdbx_ideal_coordinates_missing_flag   N 
+_chem_comp.pdbx_model_coordinates_db_code        5C87 
+_chem_comp.pdbx_subcomponent_list                ? 
+_chem_comp.pdbx_processing_site                  EBI 
+# 
+loop_
+_chem_comp_atom.comp_id 
+_chem_comp_atom.atom_id 
+_chem_comp_atom.alt_atom_id 
+_chem_comp_atom.type_symbol 
+_chem_comp_atom.charge 
+_chem_comp_atom.pdbx_align 
+_chem_comp_atom.pdbx_aromatic_flag 
+_chem_comp_atom.pdbx_leaving_atom_flag 
+_chem_comp_atom.pdbx_stereo_config 
+_chem_comp_atom.model_Cartn_x 
+_chem_comp_atom.model_Cartn_y 
+_chem_comp_atom.model_Cartn_z 
+_chem_comp_atom.pdbx_model_Cartn_x_ideal 
+_chem_comp_atom.pdbx_model_Cartn_y_ideal 
+_chem_comp_atom.pdbx_model_Cartn_z_ideal 
+_chem_comp_atom.pdbx_component_atom_id 
+_chem_comp_atom.pdbx_component_comp_id 
+_chem_comp_atom.pdbx_ordinal 
+4YS CAE C1 C 0 1 Y N N 7.926  -11.334 3.708 1.762  -1.296 0.003  CAE 4YS 1  
+4YS CAB C2 C 0 1 Y N N 6.669  -10.776 3.501 2.738  -0.339 0.002  CAB 4YS 2  
+4YS CAC C3 C 0 1 Y N N 5.751  -11.434 2.693 2.414  1.011  -0.001 CAC 4YS 3  
+4YS CAF C4 C 0 1 Y N N 6.082  -12.646 2.091 1.098  1.419  -0.002 CAF 4YS 4  
+4YS CAK C5 C 0 1 Y N N 7.339  -13.206 2.292 0.085  0.461  -0.001 CAK 4YS 5  
+4YS CAJ C6 C 0 1 Y N N 8.258  -12.545 3.107 0.420  -0.912 -0.004 CAJ 4YS 6  
+4YS CAG C7 C 0 1 N N N 9.515  -13.101 3.321 -0.667 -1.893 -0.003 CAG 4YS 7  
+4YS CAD C8 C 0 1 N N N 9.837  -14.312 2.715 -1.940 -1.467 0.001  CAD 4YS 8  
+4YS NAH N1 N 0 1 N N N 8.896  -14.965 1.905 -2.268 -0.141 0.003  NAH 4YS 9  
+4YS CAI C9 C 0 1 N N N 7.688  -14.427 1.705 -1.335 0.831  -0.002 CAI 4YS 10 
+4YS OAA O1 O 0 1 N N N 6.768  -15.056 0.914 -1.666 2.003  0.001  OAA 4YS 11 
+4YS H1  H1 H 0 1 N N N 8.645  -10.828 4.335 2.027  -2.343 0.005  H1  4YS 12 
+4YS H2  H2 H 0 1 N N N 6.408  -9.837  3.966 3.776  -0.638 0.004  H2  4YS 13 
+4YS H3  H3 H 0 1 N N N 4.774  -11.003 2.530 3.202  1.749  -0.001 H3  4YS 14 
+4YS H4  H4 H 0 1 N N N 5.361  -13.152 1.467 0.854  2.471  0.001  H4  4YS 15 
+4YS H5  H5 H 0 1 N N N 10.234 -12.598 3.951 -0.447 -2.950 -0.006 H5  4YS 16 
+4YS H6  H6 H 0 1 N N N 10.812 -14.749 2.869 -2.734 -2.199 0.001  H6  4YS 17 
+4YS H7  H7 H 0 1 N N N 9.130  -15.837 1.475 -3.205 0.109  0.005  H7  4YS 18 
+# 
+loop_
+_chem_comp_bond.comp_id 
+_chem_comp_bond.atom_id_1 
+_chem_comp_bond.atom_id_2 
+_chem_comp_bond.value_order 
+_chem_comp_bond.pdbx_aromatic_flag 
+_chem_comp_bond.pdbx_stereo_config 
+_chem_comp_bond.pdbx_ordinal 
+4YS OAA CAI DOUB N N 1  
+4YS CAI NAH SING N N 2  
+4YS CAI CAK SING N N 3  
+4YS NAH CAD SING N N 4  
+4YS CAF CAK DOUB Y N 5  
+4YS CAF CAC SING Y N 6  
+4YS CAK CAJ SING Y N 7  
+4YS CAC CAB DOUB Y N 8  
+4YS CAD CAG DOUB N N 9  
+4YS CAJ CAG SING N N 10 
+4YS CAJ CAE DOUB Y N 11 
+4YS CAB CAE SING Y N 12 
+4YS CAE H1  SING N N 13 
+4YS CAB H2  SING N N 14 
+4YS CAC H3  SING N N 15 
+4YS CAF H4  SING N N 16 
+4YS CAG H5  SING N N 17 
+4YS CAD H6  SING N N 18 
+4YS NAH H7  SING N N 19 
+# 
+loop_
+_pdbx_chem_comp_descriptor.comp_id 
+_pdbx_chem_comp_descriptor.type 
+_pdbx_chem_comp_descriptor.program 
+_pdbx_chem_comp_descriptor.program_version 
+_pdbx_chem_comp_descriptor.descriptor 
+4YS SMILES           ACDLabs              12.01 c1cccc2c1C=CNC2=O                                              
+4YS InChI            InChI                1.03  "InChI=1S/C9H7NO/c11-9-8-4-2-1-3-7(8)5-6-10-9/h1-6H,(H,10,11)" 
+4YS InChIKey         InChI                1.03  VDBNYAPERZTOOF-UHFFFAOYSA-N                                    
+4YS SMILES_CANONICAL CACTVS               3.385 O=C1NC=Cc2ccccc12                                              
+4YS SMILES           CACTVS               3.385 O=C1NC=Cc2ccccc12                                              
+4YS SMILES_CANONICAL "OpenEye OEToolkits" 1.9.2 "c1ccc2c(c1)C=CNC2=O"                                          
+4YS SMILES           "OpenEye OEToolkits" 1.9.2 "c1ccc2c(c1)C=CNC2=O"                                          
+# 
+loop_
+_pdbx_chem_comp_identifier.comp_id 
+_pdbx_chem_comp_identifier.type 
+_pdbx_chem_comp_identifier.program 
+_pdbx_chem_comp_identifier.program_version 
+_pdbx_chem_comp_identifier.identifier 
+4YS "SYSTEMATIC NAME" ACDLabs              12.01 "isoquinolin-1(2H)-one" 
+4YS "SYSTEMATIC NAME" "OpenEye OEToolkits" 1.9.2 2H-isoquinolin-1-one    
+# 
+loop_
+_pdbx_chem_comp_audit.comp_id 
+_pdbx_chem_comp_audit.action_type 
+_pdbx_chem_comp_audit.date 
+_pdbx_chem_comp_audit.processing_site 
+_pdbx_chem_comp_audit.annotator 
+_pdbx_chem_comp_audit.details 
+4YS "Create component" 2015-06-26 EBI  AM ? 
+4YS "Initial release"  2016-05-25 RCSB ?  ? 
+# 
+data_TLF
+# 
+_chem_comp.id                                    TLF 
+_chem_comp.name                                  "2-[(3-chloro-2-methylphenyl)amino]benzoic acid" 
+_chem_comp.type                                  NON-POLYMER 
+_chem_comp.pdbx_type                             HETAIN 
+_chem_comp.formula                               "C14 H12 Cl N O2" 
+_chem_comp.mon_nstd_parent_comp_id               ? 
+_chem_comp.pdbx_synonyms                         "Tolfenamic acid" 
+_chem_comp.pdbx_formal_charge                    0 
+_chem_comp.pdbx_initial_date                     2012-08-16 
+_chem_comp.pdbx_modified_date                    2012-08-24 
+_chem_comp.pdbx_ambiguous_flag                   N 
+_chem_comp.pdbx_release_status                   REL 
+_chem_comp.pdbx_replaced_by                      ? 
+_chem_comp.pdbx_replaces                         ? 
+_chem_comp.formula_weight                        261.704 
+_chem_comp.one_letter_code                       ? 
+_chem_comp.three_letter_code                     TLF 
+_chem_comp.pdbx_model_coordinates_details        ? 
+_chem_comp.pdbx_model_coordinates_missing_flag   N 
+_chem_comp.pdbx_ideal_coordinates_details        Corina 
+_chem_comp.pdbx_ideal_coordinates_missing_flag   N 
+_chem_comp.pdbx_model_coordinates_db_code        4G77 
+_chem_comp.pdbx_subcomponent_list                ? 
+_chem_comp.pdbx_processing_site                  PDBJ 
+# 
+loop_
+_chem_comp_atom.comp_id 
+_chem_comp_atom.atom_id 
+_chem_comp_atom.alt_atom_id 
+_chem_comp_atom.type_symbol 
+_chem_comp_atom.charge 
+_chem_comp_atom.pdbx_align 
+_chem_comp_atom.pdbx_aromatic_flag 
+_chem_comp_atom.pdbx_leaving_atom_flag 
+_chem_comp_atom.pdbx_stereo_config 
+_chem_comp_atom.model_Cartn_x 
+_chem_comp_atom.model_Cartn_y 
+_chem_comp_atom.model_Cartn_z 
+_chem_comp_atom.pdbx_model_Cartn_x_ideal 
+_chem_comp_atom.pdbx_model_Cartn_y_ideal 
+_chem_comp_atom.pdbx_model_Cartn_z_ideal 
+_chem_comp_atom.pdbx_component_atom_id 
+_chem_comp_atom.pdbx_component_comp_id 
+_chem_comp_atom.pdbx_ordinal 
+TLF C4  C4  C  0 1 Y N N 4.750 11.198 11.257 1.364  0.331  2.141  C4  TLF 1  
+TLF C5  C5  C  0 1 Y N N 4.316 10.683 12.444 0.333  -0.019 1.292  C5  TLF 2  
+TLF C6  C6  C  0 1 Y N N 3.082 10.018 12.434 0.609  -0.388 -0.019 C6  TLF 3  
+TLF C8  C8  C  0 1 Y N N 3.077 9.627  14.868 -1.735 -0.813 -0.405 C8  TLF 4  
+TLF C9  C9  C  0 1 Y N N 4.170 10.442 15.195 -2.312 -2.046 -0.130 C9  TLF 5  
+TLF C10 C10 C  0 1 Y N N 4.636 10.448 16.500 -3.604 -2.113 0.349  C10 TLF 6  
+TLF C11 C11 C  0 1 Y N N 3.975 9.676  17.459 -4.336 -0.956 0.559  C11 TLF 7  
+TLF C12 C12 C  0 1 Y N N 2.881 8.843  17.183 -3.781 0.277  0.293  C12 TLF 8  
+TLF C13 C13 C  0 1 Y N N 2.403 8.782  15.896 -2.474 0.363  -0.192 C13 TLF 9  
+TLF C14 C14 C  0 1 N N N 1.236 7.893  15.521 -1.874 1.677  -0.479 C14 TLF 10 
+TLF O16 O16 O  0 1 N N N 1.436 6.643  15.379 -2.536 2.805  -0.154 O16 TLF 11 
+TLF O15 O15 O  0 1 N N N 0.077 8.407  15.353 -0.782 1.745  -1.009 O15 TLF 12 
+TLF N7  N7  N  0 1 N N N 2.563 9.530  13.611 -0.432 -0.742 -0.881 N7  TLF 13 
+TLF C1  C1  C  0 1 Y N N 2.366 9.761  11.225 1.923  -0.403 -0.471 C1  TLF 14 
+TLF C17 C17 C  0 1 N N N 1.084 8.960  11.233 2.227  -0.801 -1.892 C17 TLF 15 
+TLF C2  C2  C  0 1 Y N N 2.851 10.194 9.983  2.950  -0.051 0.384  C2  TLF 16 
+TLF CL  CL  CL 0 0 N N N 2.026 9.929  8.704  4.591  -0.062 -0.181 CL  TLF 17 
+TLF C3  C3  C  0 1 Y N N 4.034 10.951 10.039 2.670  0.320  1.688  C3  TLF 18 
+TLF H1  H1  H  0 1 N N N 5.646 11.801 11.234 1.149  0.617  3.160  H1  TLF 19 
+TLF H2  H2  H  0 1 N N N 4.896 10.783 13.349 -0.687 -0.007 1.646  H2  TLF 20 
+TLF H3  H3  H  0 1 N N N 4.641 11.056 14.442 -1.748 -2.953 -0.291 H3  TLF 21 
+TLF H4  H4  H  0 1 N N N 5.497 11.040 16.772 -4.048 -3.075 0.560  H4  TLF 22 
+TLF H5  H5  H  0 1 N N N 4.329 9.724  18.478 -5.347 -1.020 0.934  H5  TLF 23 
+TLF H6  H6  H  0 1 N N N 2.422 8.260  17.968 -4.356 1.176  0.459  H6  TLF 24 
+TLF H7  H7  H  0 1 N N N 0.620 6.216  15.145 -2.102 3.644  -0.362 H7  TLF 25 
+TLF H8  H8  H  0 1 N N N 1.695 9.040  13.533 -0.245 -0.938 -1.813 H8  TLF 26 
+TLF H9  H9  H  0 1 N N N 1.318 7.891  11.122 2.210  0.083  -2.529 H9  TLF 27 
+TLF H10 H10 H  0 1 N N N 0.556 9.123  12.184 3.213  -1.262 -1.937 H10 TLF 28 
+TLF H11 H11 H  0 1 N N N 0.444 9.283  10.399 1.477  -1.512 -2.239 H11 TLF 29 
+TLF H12 H12 H  0 1 N N N 4.422 11.367 9.121  3.474  0.595  2.354  H12 TLF 30 
+# 
+loop_
+_chem_comp_bond.comp_id 
+_chem_comp_bond.atom_id_1 
+_chem_comp_bond.atom_id_2 
+_chem_comp_bond.value_order 
+_chem_comp_bond.pdbx_aromatic_flag 
+_chem_comp_bond.pdbx_stereo_config 
+_chem_comp_bond.pdbx_ordinal 
+TLF CL  C2  SING N N 1  
+TLF C2  C3  DOUB Y N 2  
+TLF C2  C1  SING Y N 3  
+TLF C3  C4  SING Y N 4  
+TLF C1  C17 SING N N 5  
+TLF C1  C6  DOUB Y N 6  
+TLF C4  C5  DOUB Y N 7  
+TLF C6  C5  SING Y N 8  
+TLF C6  N7  SING N N 9  
+TLF N7  C8  SING N N 10 
+TLF C8  C9  DOUB Y N 11 
+TLF C8  C13 SING Y N 12 
+TLF C9  C10 SING Y N 13 
+TLF O15 C14 DOUB N N 14 
+TLF O16 C14 SING N N 15 
+TLF C14 C13 SING N N 16 
+TLF C13 C12 DOUB Y N 17 
+TLF C10 C11 DOUB Y N 18 
+TLF C12 C11 SING Y N 19 
+TLF C4  H1  SING N N 20 
+TLF C5  H2  SING N N 21 
+TLF C9  H3  SING N N 22 
+TLF C10 H4  SING N N 23 
+TLF C11 H5  SING N N 24 
+TLF C12 H6  SING N N 25 
+TLF O16 H7  SING N N 26 
+TLF N7  H8  SING N N 27 
+TLF C17 H9  SING N N 28 
+TLF C17 H10 SING N N 29 
+TLF C17 H11 SING N N 30 
+TLF C3  H12 SING N N 31 
+# 
+loop_
+_pdbx_chem_comp_descriptor.comp_id 
+_pdbx_chem_comp_descriptor.type 
+_pdbx_chem_comp_descriptor.program 
+_pdbx_chem_comp_descriptor.program_version 
+_pdbx_chem_comp_descriptor.descriptor 
+TLF SMILES           ACDLabs              12.01 "Clc2cccc(Nc1ccccc1C(=O)O)c2C"                                                                   
+TLF InChI            InChI                1.03  "InChI=1S/C14H12ClNO2/c1-9-11(15)6-4-8-12(9)16-13-7-3-2-5-10(13)14(17)18/h2-8,16H,1H3,(H,17,18)" 
+TLF InChIKey         InChI                1.03  YEZNLOUZAIOMLT-UHFFFAOYSA-N                                                                      
+TLF SMILES_CANONICAL CACTVS               3.370 "Cc1c(Cl)cccc1Nc2ccccc2C(O)=O"                                                                   
+TLF SMILES           CACTVS               3.370 "Cc1c(Cl)cccc1Nc2ccccc2C(O)=O"                                                                   
+TLF SMILES_CANONICAL "OpenEye OEToolkits" 1.7.6 "Cc1c(cccc1Cl)Nc2ccccc2C(=O)O"                                                                   
+TLF SMILES           "OpenEye OEToolkits" 1.7.6 "Cc1c(cccc1Cl)Nc2ccccc2C(=O)O"                                                                   
+# 
+loop_
+_pdbx_chem_comp_identifier.comp_id 
+_pdbx_chem_comp_identifier.type 
+_pdbx_chem_comp_identifier.program 
+_pdbx_chem_comp_identifier.program_version 
+_pdbx_chem_comp_identifier.identifier 
+TLF "SYSTEMATIC NAME" ACDLabs              12.01 "2-[(3-chloro-2-methylphenyl)amino]benzoic acid"     
+TLF "SYSTEMATIC NAME" "OpenEye OEToolkits" 1.7.6 "2-[(3-chloranyl-2-methyl-phenyl)amino]benzoic acid" 
+# 
+loop_
+_pdbx_chem_comp_audit.comp_id 
+_pdbx_chem_comp_audit.action_type 
+_pdbx_chem_comp_audit.date 
+_pdbx_chem_comp_audit.processing_site 
+_pdbx_chem_comp_audit.annotator 
+_pdbx_chem_comp_audit.details 
+TLF "Create component" 2012-08-16 PDBJ YK ? 
+TLF "Initial release"  2012-08-24 RCSB ?  ? 
+# 
